--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <section class="row">
         <div class="col-1 text-margin"><h1>안성, 24시</h1></div>
-        <div class="col-5 text-margin"><h1 class="text-right">좋아하는 곳에서 바라본 안성의 시간을 담다.</h1></div>
+        <div class="col-5 text-margin"><h1 class="text-right">좋아하는 곳에서 바라본 안성의 시간</h1></div>
         </section>
         </header>
 
